tests/src/test/resources/scala/tools/nsc/effects/purity/PuritySuite-files/modsNeg.check
newSource:16: error: effect type mismatch;
 found   : (RefSet(Set(SymRef(value d))),Assigns(Map()),AnyLoc)
 required: (RefSet(Set()),Assigns(Map()),AnyLoc)
    d.i = 1
        ^
newSource:20: error: effect type mismatch;
 found   : (RefSet(Set(SymRef(value d))),Assigns(Map()),AnyLoc)
 required: (RefSet(Set()),Assigns(Map()),AnyLoc)
    d.eGlob = e
            ^
newSource:24: error: effect type mismatch;
 found   : (RefSet(Set(SymRef(value d), SymRef(value e))),Assigns(Map()),AnyLoc)
 required: (RefSet(Set()),Assigns(Map()),AnyLoc)
    d.eLoc = e
           ^
newSource:29: error: effect type mismatch;
 found   : (RefSet(Set(SymRef(value d), SymRef(value x$1$1))),Assigns(Map()),AnyLoc)
 required: (RefSet(Set(SymRef(variable ei), SymRef(value x$1$1))),Assigns(Map(variable ei -> AnyLoc, value x$1$1 -> AnyLoc)),AnyLoc)
    d.eLoc = ei
           ^
